--- a/settings.ini
+++ b/settings.ini
@@ -38,6 +38,6 @@ status = 3
 user = fastai
 
 ### Optional ###
-requirements = zipfile pandas
+requirements = nbdev zipfile pandas
 # dev_requirements = 
 # console_scripts =
