--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,5 +5,8 @@ on:
   workflow_dispatch:
 jobs:
   deploy:
+    env:
+      DOMO_ACCESS_TOKEN: ${{ secrets.DOMO_ACCESS_TOKEN }}
+      DOMO_INSTANCE : ${{ secrets.DOMO_INSTANCE}}
     runs-on: ubuntu-latest
     steps: [uses: fastai/workflows/quarto-ghp@master]
