--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,5 +3,8 @@ on:  [workflow_dispatch, pull_request, push]
 
 jobs:
   test:
+    env:
+      DOMO_ACCESS_TOKEN: ${{ secrets.DOMO_ACCESS_TOKEN }}
+      DOMO_INSTANCE : ${{ secrets.DOMO_INSTANCE}}
     runs-on: ubuntu-latest
     steps: [uses: fastai/workflows/nbdev-ci@master]
