--- a/settings.ini
+++ b/settings.ini
@@ -5,7 +5,7 @@
 ### Python library ###
 repo = mbison
 lib_name = %(repo)s
-version = 0.0.1
+version = 0.0.2
 min_python = 3.7
 license = apache2
 black_formatting = False
@@ -38,6 +38,6 @@ status = 3
 user = fastai
 
 ### Optional ###
-requirements = nbdev zipfile pandas
+requirements = nbdev pandas
 # dev_requirements = 
 # console_scripts =
